--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bitcoinjs-lib",
+  "name": "eccoinjs-lib",
   "version": "4.0.2",
-  "description": "Client-side Bitcoin JavaScript library",
+  "description": "Client-side ECCoin JavaScript library",
   "main": "./src/index.js",
   "engines": {
     "node": ">=8.0.0"
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitcoinjs/bitcoinjs-lib.git"
+    "url": "hhttps://github.com/smogm/eccoinjs-lib.git"
   },
   "files": [
     "src"
