--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "hhttps://github.com/smogm/eccoinjs-lib.git"
+    "url": "https://github.com/smogm/eccoinjs-lib.git"
   },
   "files": [
     "src"
